add job route
