# demo/hermes-maps/src/routes/vehicle-routing/solution.ts
@@ -1,4 +1,9 @@
-import { ApiSolution, PollResponse } from '@/api/generated/schemas'
+import {
+  AggregatedStatistics,
+  ApiSolution,
+  OperatorWeights,
+  PollResponse,
+} from '@/api/generated/schemas'
 import { isNil } from '@/utils/isNil'
 
 export function getSolution(
@@ -15,5 +20,39 @@ export function getSolution(
       return response.solution ?? null
     case 'Completed':
       return response.solution ?? null
+  }
+}
+
+export function getStatistics(
+  response: PollResponse | null | undefined
+): AggregatedStatistics | null {
+  if (isNil(response)) {
+    return null
+  }
+
+  switch (response.status) {
+    case 'Pending':
+      return null
+    case 'Running':
+      return response.statistics ?? null
+    case 'Completed':
+      return response.statistics ?? null
+  }
+}
+
+export function getOperatorWeights(
+  response: PollResponse | null | undefined
+): OperatorWeights | null {
+  if (isNil(response)) {
+    return null
+  }
+
+  switch (response.status) {
+    case 'Pending':
+      return null
+    case 'Running':
+      return response.weights ?? null
+    case 'Completed':
+      return response.weights ?? null
   }
 }
