# schemas/openapi.json
@@ -47,6 +47,36 @@
         }
       }
     },
+    "/vrp/jobs/{job_id}": {
+      "get": {
+        "description": "Get the job input",
+        "operationId": "getJob",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "job_id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            },
+            "style": "simple"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/VehicleRoutingJobInput"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/vrp/jobs/{job_id}/poll": {
       "get": {
         "description": "Poll a job that is currently running",
@@ -713,8 +743,18 @@
                 "type": "null"
               }
             ]
+          },
+          "statistics": {
+            "$ref": "#/components/schemas/AggregatedStatistics"
+          },
+          "weights": {
+            "$ref": "#/components/schemas/OperatorWeights"
           }
-        }
+        },
+        "required": [
+          "statistics",
+          "weights"
+        ]
       },
       "PollSolverRunning": {
         "type": "object",
@@ -1073,6 +1113,38 @@
           "job_id",
           "status",
           "created_at"
+        ]
+      },
+      "VehicleRoutingJobInput": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "locations": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Location"
+            }
+          },
+          "services": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Service"
+            }
+          },
+          "vehicles": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Vehicle"
+            }
+          }
+        },
+        "required": [
+          "id",
+          "locations",
+          "vehicles",
+          "services"
         ]
       },
       "VehicleRoutingProblem": {
